[package]
name = "journaldb"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"

[dependencies]
acore-bytes = { path = "../../bytes" }
aion-types = { path = "../../aion-types"}
heapsize = "0.4"
db = { path = "../core" }
log = "0.3"
parking_lot = "0.5"
plain_hasher = { path = "../../plain_hasher" }
rlp = { path = "../../rlp" }
util-error = { path = "../../error" }

[dev-dependencies]
logger = { path = "../../logger" }
blake2b = { path = "../../blake2b" }
